src/test/ui/gated-attr-literals.stderr
error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:18:1
   |
LL | #[fake_attr(100)]
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:20:1
   |
LL | #[fake_attr(1, 2, 3)]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:22:1
   |
LL | #[fake_attr("hello")]
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:25:1
   |
LL | #[fake_attr(1, "hi", key = 12, true, false)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:27:1
   |
LL | #[fake_attr(key = "hello", val = 10)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:29:1
   |
LL | #[fake_attr(key("hello"), val(10))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:31:1
   |
LL | #[fake_attr(enabled = true, disabled = false)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:33:1
   |
LL | #[fake_attr(true)]
   | ^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:35:1
   |
LL | #[fake_attr(pi = 3.14159)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:37:1
   |
LL | #[fake_attr(b"hi")]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error[E0658]: non-string literals in attributes, or string literals in top-level positions, are experimental (see issue #34981)
  --> $DIR/gated-attr-literals.rs:39:1
   |
LL | #[fake_doc(r"doc")]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(attr_literals)] to the crate attributes to enable

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0658`.
